<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="316dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/dialog_custom_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_time_limit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/dialog_custom_ll"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/dialog_custom_iv"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dialog_custom_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/dialog_custom"
            android:textColor="@color/dialogTimeOutOk"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_custom_tv_contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dialogTimeOutCancel"
            android:text="@string/dialog_custom_contents"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_custom_ll_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/dialog_custom_ll">

        <TextView
            android:id="@+id/dialog_custom_tv_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/dialogTimeOutCancel"
            android:gravity="center"
            android:text="@string/dialog_custom_cancel"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dialog_custom_tv_btn_ok"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/dialogTimeOutOk"
            android:gravity="center"
            android:text="@string/dialog_custom_ok"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>