<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_google_ll_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundBlack"
    android:gravity="center_vertical"
    android:onClick="customOnClick"
    android:orientation="vertical"
    tools:mContext=".src.signup.SignUpGoogleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="36dp"
        android:layout_weight="5"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/sign_up_google_ll_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border_bottom_red"
            android:orientation="horizontal"
            android:paddingBottom="13dp">

            <EditText
                android:id="@+id/sign_up_google_et_nickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/signup_et_nickname"
                android:inputType="text"
                android:textColorHint="@color/colorWhite"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/sign_up_google_iv_nickname_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:onClick="customOnClick"
                android:src="@drawable/btn_et_close" />
        </LinearLayout>

        <TextView
            android:id="@+id/sign_up_google_tv_validate_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="25dp"
            android:text="@string/signup_tv_empty_nickname"
            android:textColor="@color/colorSignUpValidationRed"
            android:textSize="12sp" />


        <LinearLayout
            android:id="@+id/sign_up_google_ll_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border_bottom_white"
            android:orientation="horizontal"
            android:paddingBottom="13dp">

            <EditText
                android:id="@+id/sign_up_google_et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:enabled="false"
                android:hint="@string/signup_et_email"
                android:textColorHint="@color/colorWhite"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/sign_up_google_iv_start_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:background="@color/colorWhite"
            android:onClick="customOnClick"
            android:src="@drawable/btn_start_app" />
    </LinearLayout>

</LinearLayout>